# vuefinder-wsgi

./: .releaserc.json  LICENSE  README.md  main.py  package.json  pyproject.toml
.github/workflows/: release.yml
tests/: test_app.py
vuefinder/: __init__.py
